--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,7 +11,7 @@
       <nav>
         <div class="container">
           <div class="navigation">
-            <a href="./index.html">
+            <a href="../index.html">
               <img src="../img/logo-header.png" alt="Designo"
             /></a>
 
