--- a/pages/about.html
+++ b/pages/about.html
@@ -71,6 +71,30 @@
           </div>
         </div>
       </section>
+
+      <section>
+        <div class="container">
+          <div class="section-main-page">
+            <div class="section-box">
+              <img src="../img/about-us/canada-build.png" alt="Designo" />
+              <h3>CANADA</h3>
+              <button><a href="./location.html">SEE LOCATIONS</a></button>
+            </div>
+
+            <div class="section-box">
+              <img src="../img/about-us/australia-buld.png" alt="Designo" />
+              <h3>AUSTRALIA</h3>
+              <button><a href="./location.html">SEE LOCATIONS</a></button>
+            </div>
+
+            <div class="section-box">
+              <img src="../img/about-us/uk-build.png" alt="Designo" />
+              <h3>UNITED KINGDOM</h3>
+              <button><a href="./location.html">SEE LOCATIONS</a></button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
