--- a/pages/contact.html
+++ b/pages/contact.html
@@ -25,6 +25,87 @@
           </div>
         </div>
       </nav>
+      <div class="container">
+        <div class="boss-div">
+          <div class="page-left">
+            <h2>Contact Us</h2>
+            <p>
+              Ready to take it to the next level? Let’s talk about your project
+              or idea and find out how we can help your business grow. If you
+              are looking for unique digital experiences that’s relatable to
+              your users, drop us a line.
+            </p>
+          </div>
+
+          <div class="page-right">
+            <form>
+              <label for="fname"></label><br />
+              <input
+                type="text"
+                id="fname"
+                name="fname"
+                placeholder="Name"
+                autocomplete="on"
+              /><br />
+
+              <label for="email"></label><br />
+              <input
+                type="email"
+                id="email"
+                name="email"
+                placeholder="Email Address"
+                autocomplete="on"
+              /><br />
+
+              <label for="number"></label><br />
+              <input
+                type="number"
+                id="number"
+                name="number"
+                placeholder="Phone"
+                autocomplete="on"
+              /><br />
+
+              <label for="text"></label><br />
+              <input
+                class="massage"
+                type="text"
+                id="text"
+                name="text"
+                placeholder="Your Massage"
+                autocomplete="on"
+              /><br />
+              <button class="submit">SUBMIT</button>
+            </form>
+          </div>
+        </div>
+      </div>
     </header>
+
+    <main>
+      <section>
+        <div class="container">
+          <div class="section-main-page">
+            <div class="section-box">
+              <img src="../img/about-us/canada-build.png" alt="Designo" />
+              <h3>CANADA</h3>
+              <button><a href="./location.html">SEE LOCATIONS</a></button>
+            </div>
+
+            <div class="section-box">
+              <img src="../img/about-us/australia-buld.png" alt="Designo" />
+              <h3>AUSTRALIA</h3>
+              <button><a href="./location.html">SEE LOCATIONS</a></button>
+            </div>
+
+            <div class="section-box">
+              <img src="../img/about-us/uk-build.png" alt="Designo" />
+              <h3>UNITED KINGDOM</h3>
+              <button><a href="./location.html">SEE LOCATIONS</a></button>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
