--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="first-box">
               <img src="../img/laptop.png" alt="Designo" />
               <h3>WEB DESIGN</h3>
-              <a href="#"
+              <a href="./pages/web-design.html"
                 ><h4>
                   VIEW PROJECTS <img src="../img/arrow-right.svg" alt="" /></h4
               ></a>
@@ -56,7 +56,7 @@
               <div class="second-box">
                 <img src="../img/mobile.jpg" alt="" />
                 <h3>APP DESIGN</h3>
-                <a href="#"
+                <a href="./pages/app-design.html"
                   ><h4>
                     VIEW PROJECTS
                     <img src="../img/arrow-right.svg" alt="" /></h4
@@ -66,7 +66,7 @@
               <div class="third-box">
                 <img src="../img/graphic-design.jpg" alt="" />
                 <h3>GRAPHIC DESIGN</h3>
-                <a href="#"
+                <a href="./pages/graphic-design.html"
                   ><h4>
                     VIEW PROJECTS
                     <img src="../img/arrow-right.svg" alt="" /></h4
