--- a/pages/about.html
+++ b/pages/about.html
@@ -95,6 +95,90 @@
           </div>
         </div>
       </section>
+
+      <section class="first-page">
+        <div class="container">
+          <div class="hiro-box">
+            <div class="picture-div">
+              <h3>The real deal</h3>
+              <p>
+                As strategic partners in our clients’ businesses, we are ready
+                to take on any challenge as our own. Solving real problems
+                require empathy and collaboration, and we strive to bring a
+                fresh perspective to every opportunity. We make design and
+                technology more accessible and give you tools to measure
+                success.
+              </p>
+              <br />
+              <p>
+                We are visual storytellers in appealing and captivating ways. By
+                combining business and marketing strategies, we inspire
+                audiences to take action and drive real results.
+              </p>
+            </div>
+
+            <img src="../img/about-us/photos-pictures.png" alt="Designo" />
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="container">
+          <div class="last-box-main">
+            <h3>Let’s talk about your project</h3>
+            <p>
+              Ready to take it to the next level? Contact us today and find out
+              how our expertise can help your business grow.
+            </p>
+            <a class="btn" href="#">GET IN TOUCH</a>
+          </div>
+        </div>
+      </section>
     </main>
+
+    <footer>
+      <div class="container">
+        <div class="navigation">
+          <a href="../index.html">
+            <img src="../img/logo-footer.png" alt="Designo"
+          /></a>
+
+          <ul>
+            <li class="header footer">
+              <a href="./about.html">OUR COMPANY</a>
+              <a href="./location.html">LOCATIONS</a>
+              <a href="./contact.html">CONTACT</a>
+            </li>
+          </ul>
+        </div>
+
+        <hr />
+
+        <div class="box-for-map">
+          <p><strong>Designo Central Office</strong></p>
+
+          <address>
+            <p>3886 Wellington Street Toronto, Ontario M9C 3J5</p>
+          </address>
+
+          <div class="location-box">
+            <p><strong>Contact</strong></p>
+            <a class="tel-number" href="tel:+998993651356"
+              >P : 1 234-567-8912</a
+            >
+            <br />
+            <a href="mailto:contact@designo.co">M : contact@designo.co</a>
+          </div>
+        </div>
+
+        <div class="box-for-icons">
+          <a href="#"><img src="../img/facebook.svg" alt="Designo" /></a>
+          <a href="#"><img src="../img/instagram.svg" alt="Designo" /></a>
+          <a href="#"><img src="../img/twitter.svg" alt="Designo" /></a>
+          <a href="#"><img src="../img/pinterest.svg" alt="Designo" /></a>
+          <a href="#"><img src="../img/youtube.svg" alt="Designo" /></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
