--- a/pages/contact.html
+++ b/pages/contact.html
@@ -25,6 +25,7 @@
           </div>
         </div>
       </nav>
+
       <div class="container">
         <div class="boss-div">
           <div class="page-left">
@@ -107,5 +108,50 @@
         </div>
       </section>
     </main>
+
+    <footer>
+      <div class="container">
+        <div class="navigation">
+          <a href="../index.html">
+            <img src="../img/logo-footer.png" alt="Designo"
+          /></a>
+
+          <ul>
+            <li class="header footer">
+              <a href="./about.html">OUR COMPANY</a>
+              <a href="./location.html">LOCATIONS</a>
+              <a href="./contact.html">CONTACT</a>
+            </li>
+          </ul>
+        </div>
+
+        <hr />
+
+        <div class="box-for-map">
+          <p><strong>Designo Central Office</strong></p>
+
+          <address>
+            <p>3886 Wellington Street Toronto, Ontario M9C 3J5</p>
+          </address>
+
+          <div class="location-box">
+            <p><strong>Contact</strong></p>
+            <a class="tel-number" href="tel:+998993651356"
+              >P : 1 234-567-8912</a
+            >
+            <br />
+            <a href="mailto:contact@designo.co">M : contact@designo.co</a>
+          </div>
+        </div>
+
+        <div class="box-for-icons">
+          <a href="#"><img src="../img/facebook.svg" alt="Designo" /></a>
+          <a href="#"><img src="../img/instagram.svg" alt="Designo" /></a>
+          <a href="#"><img src="../img/twitter.svg" alt="Designo" /></a>
+          <a href="#"><img src="../img/pinterest.svg" alt="Designo" /></a>
+          <a href="#"><img src="../img/youtube.svg" alt="Designo" /></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
