--- a/pages/location.html
+++ b/pages/location.html
@@ -31,12 +31,16 @@
           <div class="box-for-map">
             <h3>Canada</h3>
             <p><strong>Designo Central Office</strong></p>
-            <p>3886 Wellington Street Toronto, Ontario M9C 3J5</p>
+
+            <address>
+              <p>3886 Wellington Street Toronto, Ontario M9C 3J5</p>
+            </address>
 
             <div class="location-box">
               <p><strong>Contact</strong></p>
-              <p>P:1 234-567-8912</p>
-              <p>M:contact@designo.co</p>
+              <a href="tel:12345678912">P:1 234-567-8912</a>
+              <br />
+              <a href="mailto:contact@designo.co">M:contact@designo.co</a>
             </div>
           </div>
 
@@ -49,12 +53,16 @@
           <div class="box-for-map map-box-2">
             <h3>Australia</h3>
             <p><strong>Designo AU Office</strong></p>
-            <p>19 Balonne StreetNew South Wales 2443</p>
+
+            <address>
+              <p>19 Balonne StreetNew South Wales 2443</p>
+            </address>
 
             <div class="location-box">
               <p><strong>Contact</strong></p>
-              <p>P:(02) 6720 9092</p>
-              <p>M:contact@designo.co</p>
+              <a href="tel:0267209092">P:(02) 6720 9092</a>
+              <br />
+              <a href="mailto:contact@designo.co">M:contact@designo.co</a>
             </div>
           </div>
         </div>
@@ -63,12 +71,16 @@
           <div class="box-for-map">
             <h3>United Kingdom</h3>
             <p><strong>Designo Central Office</strong></p>
-            <p>3886 Wellington Street Toronto, Ontario M9C 3J5</p>
+
+            <address>
+              <p>3886 Wellington Street Toronto, Ontario M9C 3J5</p>
+            </address>
 
             <div class="location-box">
               <p><strong>Contact</strong></p>
-              <p>P:1 234-567-8912</p>
-              <p>M:contact@designo.co</p>
+              <a href="tel:12345678912">P:1 234-567-8912</a>
+              <br />
+              <a href="mailto:contact@designo.co">M:contact@designo.co</a>
             </div>
           </div>
 
@@ -76,5 +88,65 @@
         </div>
       </div>
     </header>
+
+    <main>
+      <section>
+        <div class="container">
+          <div class="last-box-main">
+            <h3>Let’s talk about your project</h3>
+            <p>
+              Ready to take it to the next level? Contact us today and find out
+              how our expertise can help your business grow.
+            </p>
+            <a class="btn" href="#">GET IN TOUCH</a>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <div class="container">
+        <div class="navigation">
+          <a href="./index.html">
+            <img src="../img/logo-footer.png" alt="Designo"
+          /></a>
+
+          <ul>
+            <li class="header footer">
+              <a href="./about.html">OUR COMPANY</a>
+              <a href="./location.html">LOCATIONS</a>
+              <a href="./contact.html">CONTACT</a>
+            </li>
+          </ul>
+        </div>
+
+        <hr />
+
+        <div class="box-for-map1">
+          <p><strong>Designo Central Office</strong></p>
+
+          <address>
+            <p>3886 Wellington Street Toronto, Ontario M9C 3J5</p>
+          </address>
+
+          <div class="location-box">
+            <p><strong>Contact</strong></p>
+            <a class="tel-number" href="tel:+998993651356"
+              >P : 1 234-567-8912</a
+            >
+            <br />
+            <a href="mailto:contact@designo.co">M : contact@designo.co</a>
+          </div>
+        </div>
+
+        <div class="box-for-icons">
+          <a href="#"><img src="../img/facebook.svg" alt="Designo" /></a>
+          <a href="#"><img src="../img/instagram.svg" alt="Designo" /></a>
+          <a href="#"><img src="../img/twitter.svg" alt="Designo" /></a>
+          <a href="#"><img src="../img/pinterest.svg" alt="Designo" /></a>
+          <a href="#"><img src="../img/youtube.svg" alt="Designo" /></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
