--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Designo</title>
-    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
     <header>
       <nav>
         <div class="container">
           <div class="navigation">
-            <a href="../pages/index.html">
-              <img src="../img/logo-header.png" alt="Designo"
+            <a href="./index.html">
+              <img src="./img/logo-header.png" alt="Designo"
             /></a>
 
             <ul>
               <li class="header">
-                <a href="../pages/about.html">OUR COMPANY</a>
-                <a href="../pages/location.html">LOCATIONS</a>
-                <a href="../pages/contact.html">CONTACT</a>
+                <a href="./pages/about.html">OUR COMPANY</a>
+                <a href="./pages/location.html">LOCATIONS</a>
+                <a href="./pages/contact.html">CONTACT</a>
               </li>
             </ul>
           </div>
@@ -44,32 +44,32 @@
         <div class="container">
           <div class="all-images">
             <div class="first-box">
-              <img src="../img/laptop.png" alt="Designo" />
+              <img src="./img/laptop.png" alt="Designo" />
               <h3>WEB DESIGN</h3>
               <a href="./pages/web-design.html"
                 ><h4>
-                  VIEW PROJECTS <img src="../img/arrow-right.svg" alt="" /></h4
+                  VIEW PROJECTS <img src="./img/arrow-right.svg" alt="" /></h4
               ></a>
             </div>
 
             <div class="family-boxes">
               <div class="second-box">
-                <img src="../img/mobile.jpg" alt="" />
+                <img src="./img/mobile.jpg" alt="" />
                 <h3>APP DESIGN</h3>
                 <a href="./pages/app-design.html"
                   ><h4>
                     VIEW PROJECTS
-                    <img src="../img/arrow-right.svg" alt="" /></h4
+                    <img src="./img/arrow-right.svg" alt="" /></h4
                 ></a>
               </div>
 
               <div class="third-box">
-                <img src="../img/graphic-design.jpg" alt="" />
+                <img src="./img/graphic-design.jpg" alt="" />
                 <h3>GRAPHIC DESIGN</h3>
                 <a href="./pages/graphic-design.html"
                   ><h4>
                     VIEW PROJECTS
-                    <img src="../img/arrow-right.svg" alt="" /></h4
+                    <img src="./img/arrow-right.svg" alt="" /></h4
                 ></a>
               </div>
             </div>
@@ -81,7 +81,7 @@
         <div class="container">
           <div class="father-div">
             <div class="active-box">
-              <img src="../img/worker-man.svg" alt="Designo" />
+              <img src="./img/worker-man.svg" alt="Designo" />
 
               <div class="text-box">
                 <h3>PASSIONATE</h3>
@@ -94,7 +94,7 @@
             </div>
 
             <div class="active-box">
-              <img src="../img/worker-woman.svg" alt="Designo" />
+              <img src="./img/worker-woman.svg" alt="Designo" />
 
               <div class="text-box">
                 <h3>RESOURCEFUL</h3>
@@ -108,7 +108,7 @@
             </div>
 
             <div class="active-box">
-              <img src="../img/man-woman.svg" alt="Designo" />
+              <img src="./img/man-woman.svg" alt="Designo" />
 
               <div class="text-box">
                 <h3>FRIENDLY</h3>
@@ -128,6 +128,64 @@
           <div class="last-box"></div>
         </div>
       </section>
+
+      <section>
+        <div class="container">
+          <div class="last-box-main">
+            <h3>Let’s talk about your project</h3>
+            <p>
+              Ready to take it to the next level? Contact us today and find out
+              how our expertise can help your business grow.
+            </p>
+            <a class="btn" href="#">GET IN TOUCH</a>
+          </div>
+        </div>
+      </section>
     </main>
+
+    <footer>
+      <div class="container">
+        <div class="navigation">
+          <a href="./index.html">
+            <img src="./img/logo-footer.png" alt="Designo"
+          /></a>
+
+          <ul>
+            <li class="header footer">
+              <a href="./pages/about.html">OUR COMPANY</a>
+              <a href="./pages/location.html">LOCATIONS</a>
+              <a href="./pages/contact.html">CONTACT</a>
+            </li>
+          </ul>
+        </div>
+
+        <hr />
+
+        <div class="box-for-map">
+          <p><strong>Designo Central Office</strong></p>
+
+          <address>
+            <p>3886 Wellington Street Toronto, Ontario M9C 3J5</p>
+          </address>
+
+          <div class="location-box">
+            <p><strong>Contact</strong></p>
+            <a class="tel-number" href="tel:+998993651356"
+              >P : 1 234-567-8912</a
+            >
+            <br />
+            <a href="mailto:contact@designo.co">M : contact@designo.co</a>
+          </div>
+        </div>
+
+        <div class="box-for-icons">
+          <a href="#"><img src="./img/facebook.svg" alt="Designo" /></a>
+          <a href="#"><img src="./img/instagram.svg" alt="Designo" /></a>
+          <a href="#"><img src="./img/twitter.svg" alt="Designo" /></a>
+          <a href="#"><img src="./img/pinterest.svg" alt="Designo" /></a>
+          <a href="#"><img src="./img/youtube.svg" alt="Designo" /></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
