--- a/pages/about.html
+++ b/pages/about.html
@@ -46,7 +46,7 @@
       </div>
     </header>
 
-    <main>
+    <!-- <main>
       <section class="first-page">
         <div class="container">
           <div class="hiro-box">
@@ -179,6 +179,6 @@
           <a href="#"><img src="../img/youtube.svg" alt="Designo" /></a>
         </div>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
