--- a/index.html
+++ b/index.html
@@ -10,17 +10,20 @@
     <header>
       <nav>
         <div class="container">
-          <div class="navigation">
+          <div class="navigation navigation-header">
             <a href="./index.html">
               <img src="./img/logo-header.png" alt="Designo"
             /></a>
 
             <ul>
-              <li class="header">
+              <li class="header li-header">
                 <a href="./pages/about.html">OUR COMPANY</a>
                 <a href="./pages/location.html">LOCATIONS</a>
                 <a href="./pages/contact.html">CONTACT</a>
               </li>
+              <button>
+                <img class="burger" src="./img/burger.svg" alt="" />
+              </button>
             </ul>
           </div>
         </div>
@@ -44,32 +47,30 @@
         <div class="container">
           <div class="all-images">
             <div class="first-box">
-              <img src="./img/laptop.png" alt="Designo" />
               <h3>WEB DESIGN</h3>
-              <a href="./pages/web-design.html"
+              <a class="web-page" href="./pages/web-design.html"
                 ><h4>
-                  VIEW PROJECTS <img src="./img/arrow-right.svg" alt="" /></h4
+                  VIEW PROJECTS
+                  <img src="../img/arrow-right.svg" alt="" /></h4
               ></a>
             </div>
 
             <div class="family-boxes">
               <div class="second-box">
-                <img src="./img/mobile.jpg" alt="" />
                 <h3>APP DESIGN</h3>
-                <a href="./pages/app-design.html"
+                <a class="web-page" href="./pages/app-design.html"
                   ><h4>
                     VIEW PROJECTS
-                    <img src="./img/arrow-right.svg" alt="" /></h4
+                    <img src="../img/arrow-right.svg" alt="" /></h4
                 ></a>
               </div>
 
               <div class="third-box">
-                <img src="./img/graphic-design.jpg" alt="" />
                 <h3>GRAPHIC DESIGN</h3>
-                <a href="./pages/graphic-design.html"
+                <a class="web-page" href="./pages/graphic-design.html"
                   ><h4>
                     VIEW PROJECTS
-                    <img src="./img/arrow-right.svg" alt="" /></h4
+                    <img src="../img/arrow-right.svg" alt="" /></h4
                 ></a>
               </div>
             </div>
@@ -123,12 +124,6 @@
         </div>
       </section>
 
-      <section class="bottom-page">
-        <div class="container">
-          <div class="last-box"></div>
-        </div>
-      </section>
-
       <section>
         <div class="container">
           <div class="last-box-main">
@@ -145,13 +140,13 @@
 
     <footer>
       <div class="container">
-        <div class="navigation">
+        <div class="navigation navigation-footer">
           <a href="./index.html">
             <img src="./img/logo-footer.png" alt="Designo"
           /></a>
 
           <ul>
-            <li class="header footer">
+            <li class="header footer-section">
               <a href="./pages/about.html">OUR COMPANY</a>
               <a href="./pages/location.html">LOCATIONS</a>
               <a href="./pages/contact.html">CONTACT</a>
@@ -174,7 +169,9 @@
               >P : 1 234-567-8912</a
             >
             <br />
-            <a href="mailto:contact@designo.co">M : contact@designo.co</a>
+            <a class="tel-number" href="mailto:contact@designo.co"
+              >M : contact@designo.co</a
+            >
           </div>
         </div>
 
