--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <a class="web-page" href="./pages/web-design.html"
                 ><h4>
                   VIEW PROJECTS
-                  <img src="../img/arrow-right.svg" alt="" /></h4
+                  <img src="./img/arrow-right.svg" alt="" /></h4
               ></a>
             </div>
 
@@ -61,7 +61,7 @@
                 <a class="web-page" href="./pages/app-design.html"
                   ><h4>
                     VIEW PROJECTS
-                    <img src="../img/arrow-right.svg" alt="" /></h4
+                    <img src="./img/arrow-right.svg" alt="" /></h4
                 ></a>
               </div>
 
@@ -70,7 +70,7 @@
                 <a class="web-page" href="./pages/graphic-design.html"
                   ><h4>
                     VIEW PROJECTS
-                    <img src="../img/arrow-right.svg" alt="" /></h4
+                    <img src="./img/arrow-right.svg" alt="" /></h4
                 ></a>
               </div>
             </div>
