--- a/pages/about.html
+++ b/pages/about.html
@@ -28,6 +28,12 @@
 
       <div class="container">
         <div class="all-bg-img">
+          <img
+            class="bg-tablet"
+            src="../img/tablet-verision/about-us-bg1.png"
+            alt=""
+          />
+
           <div class="hero">
             <h1>About Us</h1>
             <p>
@@ -40,17 +46,31 @@
           </div>
 
           <div class="bg-img-header">
-            <img src="../img/about-us/header-img.png" alt="Designo" />
+            <img
+              class="bg-desctop"
+              src="../img/about-us/header-img.png"
+              alt="Designo"
+            />
           </div>
         </div>
       </div>
     </header>
 
-    <!-- <main>
+    <main>
       <section class="first-page">
         <div class="container">
           <div class="hiro-box">
-            <img src="../img/about-us/photos-drow.png" alt="Designo" />
+            <img
+              class="bg-tablet"
+              src="../img/tablet-verision/about-us-bg2.png"
+              alt=""
+            />
+
+            <img
+              class="bg-desctop"
+              src="../img/about-us/photos-drow.png"
+              alt="Designo"
+            />
             <div class="picture-div">
               <h3>World-class talent</h3>
               <p>
@@ -99,6 +119,12 @@
       <section class="first-page">
         <div class="container">
           <div class="hiro-box">
+            <img
+              class="bg-tablet"
+              src="../img/tablet-verision/about-us-bg3.jpg"
+              alt=""
+            />
+
             <div class="picture-div">
               <h3>The real deal</h3>
               <p>
@@ -117,7 +143,11 @@
               </p>
             </div>
 
-            <img src="../img/about-us/photos-pictures.png" alt="Designo" />
+            <img
+              class="bg-desctop"
+              src="../img/about-us/photos-pictures.png"
+              alt="Designo"
+            />
           </div>
         </div>
       </section>
@@ -167,18 +197,30 @@
               >P : 1 234-567-8912</a
             >
             <br />
-            <a href="mailto:contact@designo.co">M : contact@designo.co</a>
+            <a class="tel-number" href="mailto:contact@designo.co"
+              >M : contact@designo.co</a
+            >
           </div>
         </div>
 
         <div class="box-for-icons">
-          <a href="#"><img src="../img/facebook.svg" alt="Designo" /></a>
-          <a href="#"><img src="../img/instagram.svg" alt="Designo" /></a>
-          <a href="#"><img src="../img/twitter.svg" alt="Designo" /></a>
-          <a href="#"><img src="../img/pinterest.svg" alt="Designo" /></a>
-          <a href="#"><img src="../img/youtube.svg" alt="Designo" /></a>
+          <a target="_blank" href="https://www.facebook.com/"
+            ><img src="../img/facebook.svg" alt="Designo"
+          /></a>
+          <a target="_blank" href="https://www.youtube.com/?app=desktop&hl=ru"
+            ><img src="../img/youtube.svg" alt="Designo"
+          /></a>
+          <a target="_blank" href="https://www.twitter.com/"
+            ><img src="../img/twitter.svg" alt="Designo"
+          /></a>
+          <a target="_blank" href="https://www.pinteres.com/"
+            ><img src="../img/pinterest.svg" alt="Designo"
+          /></a>
+          <a target="_blank" href="https://www.instagram.com/"
+            ><img src="../img/instagram.svg" alt="Designo"
+          /></a>
         </div>
       </div>
-    </footer> -->
+    </footer>
   </body>
 </html>
